# minimalist-rust

./: Cargo.toml  Makefile  download_resources.py  setup.ps1  setup.sh  test_browser.sh
src/: browser_core.rs  main.rs  main_window.rs  shell.html
src/assets/: browser_pages.rs  mod.rs
