[package]
name = "minimalist-browser"
version = "0.1.0"
edition = "2021"
authors = ["Minimalist Browser Team"]
description = "Ultra-lightweight browser with Flash support and memory optimization"

[dependencies]
# Core window and event handling
winit = "0.28"
wry = "0.33"  # WebView2 wrapper, very lightweight

# UI (optional - can be removed for pure WebView)
egui = { version = "0.24", optional = true }
egui-winit = { version = "0.24", optional = true }

# Async runtime
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }

# URL and network handling
url = "2.5"
urlencoding = "2.2"
percent-encoding = "2.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Regex for URL validation
regex = "1.10"
lazy_static = "1.4"

# Flash/Ruffle support
ruffle_core = { version = "0.1", optional = true }

# Platform-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
] }
winapi = { version = "0.3", features = ["psapi", "winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2.0", features = ["v2_38"] }
gtk = "0.18"

[features]
default = ["native-ui"]
native-ui = ["egui", "egui-winit"]
ruffle = ["ruffle_core"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 2  # Optimize dependencies less aggressively

# Memory optimization build settings
[profile.minimal]
inherits = "release"
opt-level = "z"  # Optimize for size
lto = "fat"
strip = true
panic = "abort"