[package]
name = "minimalist-browser"
version = "0.1.0"
edition = "2021"
authors = ["Minimalist Browser Team"]
description = "Ultra-lightweight browser with Flash support and memory optimization"

[dependencies]
# Core webview - wry includes its own windowing (tao)
wry = "0.33"

# Async runtime
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }

# URL and network handling
url = "2.5"
urlencoding = "2.1"
percent-encoding = "2.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Regex for URL validation
regex = "1.10"
lazy_static = "1.4"

# Platform-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
] }
winapi = { version = "0.3", features = ["psapi", "processthreadsapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# wry handles webkit2gtk internally, no need to add separately

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 2

[profile.minimal]
inherits = "release"
opt-level = "z"
lto = "fat"
strip = true
panic = "abort"